[gd_scene load_steps=5 format=4 uid="uid://chjesqh1wx5jm"]

[ext_resource type="Script" uid="uid://dkxhh535cfxwc" path="res://Arenas/arena.gd" id="1_4kkwr"]
[ext_resource type="PackedScene" uid="uid://lpg18dynrpiy" path="res://Arenas/tile_map_layer.tscn" id="2_pb4r7"]
[ext_resource type="PackedScene" uid="uid://jupqqfv4usfg" path="res://testing/doomy.tscn" id="4_n7d4a"]
[ext_resource type="PackedScene" uid="uid://bpqfadsqgyavu" path="res://equipment/weapons/sword.tscn" id="5_q76kk"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_4kkwr")

[node name="TileMapLayer" parent="." instance=ExtResource("2_pb4r7")]
tile_map_data = PackedByteArray("AAAVAA4AAAABAAIAAAAVAA0AAAACAAIAAAAVAAwAAAABAAEAAAAVAAsAAAABAAIAAAAVAAoAAAABAAEAAAAVAAkAAAACAAEAAAAVAAgAAAABAAEAAAAVAAcAAAABAAIAAAAVAAYAAAABAAEAAAAVAAUAAAABAAIAAAAVAAQAAAACAAEAAAAVAAMAAAABAAEAAAAVAAIAAAACAAIAAAAVAAEAAAACAAEAAAAVAAAAAAACAAIAAAAUAA4AAAABAAIAAAAUAA0AAAACAAIAAAAUAAwAAAACAAEAAAAUAAsAAAACAAEAAAAUAAoAAAACAAEAAAAUAAkAAAABAAEAAAAUAAgAAAACAAIAAAAUAAcAAAABAAIAAAAUAAYAAAACAAEAAAAUAAUAAAACAAIAAAAUAAQAAAABAAEAAAAUAAMAAAABAAIAAAAUAAIAAAABAAIAAAAUAAEAAAABAAIAAAAUAAAAAAACAAEAAAATAA4AAAACAAIAAAATAA0AAAABAAEAAAATAAwAAAACAAIAAAATAAsAAAACAAEAAAATAAoAAAACAAEAAAATAAkAAAABAAEAAAATAAgAAAABAAIAAAATAAcAAAACAAEAAAATAAYAAAACAAEAAAATAAUAAAABAAEAAAATAAQAAAACAAEAAAATAAMAAAABAAIAAAATAAIAAAABAAIAAAATAAEAAAACAAEAAAATAAAAAAACAAEAAAASAA4AAAACAAIAAAASAA0AAAACAAIAAAASAAwAAAABAAIAAAASAAsAAAACAAIAAAASAAoAAAACAAEAAAASAAkAAAACAAEAAAASAAgAAAACAAEAAAASAAcAAAACAAEAAAASAAYAAAACAAEAAAASAAUAAAABAAIAAAASAAQAAAABAAEAAAASAAMAAAABAAEAAAASAAIAAAACAAEAAAASAAEAAAABAAIAAAASAAAAAAACAAEAAAARAA4AAAACAAEAAAARAA0AAAACAAEAAAARAAwAAAACAAIAAAARAAsAAAABAAIAAAARAAoAAAABAAEAAAARAAkAAAACAAEAAAARAAgAAAACAAEAAAARAAcAAAACAAEAAAARAAYAAAABAAIAAAARAAUAAAABAAEAAAARAAQAAAACAAIAAAARAAMAAAACAAIAAAARAAIAAAABAAEAAAARAAEAAAABAAIAAAARAAAAAAABAAEAAAAQAA4AAAACAAIAAAAQAA0AAAACAAIAAAAQAAwAAAACAAEAAAAQAAsAAAACAAEAAAAQAAoAAAACAAIAAAAQAAkAAAABAAIAAAAQAAgAAAACAAEAAAAQAAcAAAABAAIAAAAQAAYAAAACAAIAAAAQAAUAAAACAAEAAAAQAAQAAAACAAIAAAAQAAMAAAABAAEAAAAQAAIAAAABAAEAAAAQAAEAAAACAAIAAAAQAAAAAAABAAIAAAAPAA4AAAABAAEAAAAPAA0AAAABAAEAAAAPAAwAAAACAAIAAAAPAAsAAAACAAIAAAAPAAoAAAABAAEAAAAPAAkAAAABAAIAAAAPAAgAAAACAAIAAAAPAAcAAAACAAEAAAAPAAYAAAACAAEAAAAPAAUAAAACAAIAAAAPAAQAAAABAAEAAAAPAAMAAAACAAIAAAAPAAIAAAABAAEAAAAPAAEAAAABAAEAAAAPAAAAAAACAAEAAAAOAA4AAAACAAEAAAAOAA0AAAACAAEAAAAOAAwAAAACAAEAAAAOAAsAAAABAAIAAAAOAAoAAAACAAEAAAAOAAkAAAABAAIAAAAOAAgAAAABAAEAAAAOAAcAAAACAAEAAAAOAAYAAAACAAEAAAAOAAUAAAABAAIAAAAOAAQAAAABAAIAAAAOAAMAAAACAAEAAAAOAAIAAAACAAEAAAAOAAEAAAACAAIAAAAOAAAAAAABAAIAAAANAA4AAAACAAIAAAANAA0AAAABAAEAAAANAAwAAAACAAEAAAANAAsAAAABAAIAAAANAAoAAAABAAEAAAANAAkAAAACAAEAAAANAAgAAAACAAEAAAANAAcAAAABAAEAAAANAAYAAAACAAEAAAANAAUAAAACAAIAAAANAAQAAAACAAIAAAANAAMAAAABAAIAAAANAAIAAAACAAEAAAANAAEAAAABAAIAAAANAAAAAAABAAEAAAAMAA4AAAABAAEAAAAMAA0AAAACAAEAAAAMAAwAAAABAAIAAAAMAAsAAAACAAEAAAAMAAoAAAACAAEAAAAMAAkAAAABAAEAAAAMAAgAAAACAAIAAAAMAAcAAAABAAIAAAAMAAYAAAACAAIAAAAMAAUAAAABAAIAAAAMAAQAAAACAAEAAAAMAAMAAAABAAEAAAAMAAIAAAACAAIAAAAMAAEAAAABAAIAAAAMAAAAAAABAAEAAAALAA4AAAABAAEAAAALAA0AAAABAAIAAAALAAwAAAABAAEAAAALAAsAAAACAAIAAAALAAoAAAABAAIAAAALAAkAAAABAAIAAAALAAgAAAABAAEAAAALAAcAAAABAAIAAAALAAYAAAACAAIAAAALAAUAAAABAAIAAAALAAQAAAABAAIAAAALAAMAAAACAAEAAAALAAIAAAABAAEAAAALAAEAAAABAAEAAAALAAAAAAACAAEAAAAKAA4AAAACAAEAAAAKAA0AAAACAAEAAAAKAAwAAAACAAIAAAAKAAsAAAACAAEAAAAKAAoAAAABAAEAAAAKAAkAAAABAAIAAAAKAAgAAAACAAEAAAAKAAcAAAABAAIAAAAKAAYAAAABAAIAAAAKAAUAAAABAAIAAAAKAAQAAAACAAEAAAAKAAMAAAACAAEAAAAKAAIAAAACAAEAAAAKAAEAAAACAAIAAAAKAAAAAAABAAIAAAAJAA4AAAABAAEAAAAJAA0AAAACAAIAAAAJAAwAAAABAAIAAAAJAAsAAAABAAIAAAAJAAoAAAABAAEAAAAJAAkAAAABAAEAAAAJAAgAAAACAAEAAAAJAAcAAAABAAEAAAAJAAYAAAACAAIAAAAJAAUAAAABAAEAAAAJAAQAAAACAAIAAAAJAAMAAAACAAEAAAAJAAIAAAACAAIAAAAJAAEAAAABAAIAAAAJAAAAAAACAAIAAAAIAA4AAAABAAEAAAAIAA0AAAABAAIAAAAIAAwAAAACAAEAAAAIAAsAAAACAAEAAAAIAAoAAAABAAIAAAAIAAkAAAACAAEAAAAIAAgAAAABAAIAAAAIAAcAAAACAAEAAAAIAAYAAAACAAEAAAAIAAUAAAABAAEAAAAIAAQAAAACAAIAAAAIAAMAAAABAAEAAAAIAAIAAAABAAIAAAAIAAEAAAACAAIAAAAIAAAAAAABAAIAAAAHAA4AAAACAAEAAAAHAA0AAAABAAEAAAAHAAwAAAACAAEAAAAHAAsAAAABAAIAAAAHAAoAAAABAAIAAAAHAAkAAAACAAEAAAAHAAgAAAACAAIAAAAHAAcAAAACAAIAAAAHAAYAAAACAAEAAAAHAAUAAAACAAIAAAAHAAQAAAABAAIAAAAHAAMAAAACAAIAAAAHAAIAAAACAAEAAAAHAAEAAAACAAIAAAAHAAAAAAACAAEAAAAGAA4AAAACAAIAAAAGAA0AAAACAAIAAAAGAAwAAAACAAIAAAAGAAsAAAABAAIAAAAGAAoAAAABAAIAAAAGAAkAAAABAAIAAAAGAAgAAAABAAEAAAAGAAcAAAACAAIAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAIAAAAGAAMAAAABAAIAAAAGAAIAAAABAAEAAAAGAAEAAAACAAIAAAAGAAAAAAACAAEAAAAFAA4AAAABAAEAAAAFAA0AAAABAAEAAAAFAAwAAAACAAEAAAAFAAsAAAACAAEAAAAFAAoAAAACAAEAAAAFAAkAAAABAAEAAAAFAAgAAAABAAIAAAAFAAcAAAABAAIAAAAFAAYAAAABAAIAAAAFAAUAAAABAAEAAAAFAAQAAAACAAEAAAAFAAMAAAACAAIAAAAFAAIAAAABAAIAAAAFAAEAAAACAAIAAAAFAAAAAAACAAIAAAAEAA4AAAACAAEAAAAEAA0AAAACAAIAAAAEAAwAAAABAAIAAAAEAAsAAAABAAIAAAAEAAoAAAACAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAACAAIAAAAEAAYAAAACAAIAAAAEAAUAAAACAAIAAAAEAAQAAAACAAEAAAAEAAMAAAACAAEAAAAEAAIAAAABAAIAAAAEAAEAAAABAAEAAAAEAAAAAAABAAIAAAADAA4AAAABAAIAAAADAA0AAAABAAEAAAADAAwAAAACAAIAAAADAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAkAAAACAAIAAAADAAgAAAACAAEAAAADAAcAAAACAAIAAAADAAYAAAABAAEAAAADAAUAAAACAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAEAAAADAAIAAAACAAEAAAADAAEAAAABAAIAAAADAAAAAAACAAIAAAACAA4AAAABAAIAAAACAA0AAAABAAIAAAACAAwAAAABAAEAAAACAAsAAAACAAEAAAACAAoAAAABAAIAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAACAAIAAAACAAYAAAABAAIAAAACAAUAAAABAAEAAAACAAQAAAACAAEAAAACAAMAAAACAAEAAAACAAIAAAACAAIAAAACAAEAAAACAAIAAAACAAAAAAACAAEAAAABAA4AAAACAAIAAAABAA0AAAACAAEAAAABAAwAAAACAAIAAAABAAsAAAABAAIAAAABAAoAAAACAAEAAAABAAkAAAABAAIAAAABAAgAAAABAAIAAAABAAcAAAACAAEAAAABAAYAAAACAAEAAAABAAUAAAABAAIAAAABAAQAAAABAAIAAAABAAMAAAACAAIAAAABAAIAAAACAAIAAAABAAEAAAABAAIAAAABAAAAAAACAAIAAAAAAA4AAAABAAEAAAAAAA0AAAABAAEAAAAAAAwAAAABAAIAAAAAAAsAAAABAAIAAAAAAAoAAAACAAEAAAAAAAkAAAABAAIAAAAAAAgAAAACAAEAAAAAAAcAAAABAAIAAAAAAAYAAAACAAIAAAAAAAUAAAACAAEAAAAAAAQAAAACAAIAAAAAAAMAAAACAAIAAAAAAAIAAAACAAEAAAAAAAEAAAABAAIAAAAAAAAAAAABAAEAAAD//w4AAAABAAIAAAD//w0AAAABAAEAAAD//wwAAAACAAIAAAD//wsAAAABAAEAAAD//woAAAACAAIAAAD//wkAAAABAAEAAAD//wgAAAABAAEAAAD//wcAAAABAAEAAAD//wYAAAACAAEAAAD//wUAAAACAAIAAAD//wQAAAACAAEAAAD//wMAAAACAAEAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wAAAAABAAEAAAD+/w4AAAACAAEAAAD+/w0AAAABAAIAAAD+/wwAAAABAAEAAAD+/wsAAAACAAIAAAD+/woAAAACAAEAAAD+/wkAAAACAAIAAAD+/wgAAAABAAIAAAD+/wcAAAACAAIAAAD+/wYAAAACAAEAAAD+/wUAAAACAAIAAAD+/wQAAAACAAIAAAD+/wMAAAABAAIAAAD+/wIAAAABAAIAAAD+/wEAAAABAAEAAAD+/wAAAAACAAIAAAAbABAAAAABAAEAAAAbAA8AAAACAAEAAAAbAA4AAAACAAIAAAAbAA0AAAACAAEAAAAbAAwAAAABAAIAAAAbAAsAAAABAAEAAAAbAAoAAAABAAIAAAAbAAkAAAACAAIAAAAaABAAAAABAAEAAAAaAA8AAAACAAIAAAAaAA4AAAACAAIAAAAaAA0AAAABAAIAAAAaAAwAAAABAAEAAAAaAAsAAAACAAIAAAAaAAoAAAABAAIAAAAaAAkAAAABAAIAAAAZABAAAAABAAEAAAAZAA8AAAABAAIAAAAZAA4AAAACAAEAAAAZAA0AAAACAAIAAAAZAAwAAAACAAIAAAAZAAsAAAABAAIAAAAZAAoAAAACAAEAAAAZAAkAAAACAAIAAAAYABAAAAACAAEAAAAYAA8AAAACAAEAAAAYAA4AAAACAAEAAAAYAA0AAAABAAEAAAAYAAwAAAACAAEAAAAYAAsAAAACAAEAAAAYAAoAAAABAAIAAAAYAAkAAAACAAEAAAAXABAAAAABAAIAAAAXAA8AAAABAAEAAAAXAA4AAAABAAEAAAAXAA0AAAACAAEAAAAXAAwAAAABAAIAAAAXAAsAAAACAAEAAAAXAAoAAAABAAEAAAAXAAkAAAABAAEAAAAWABAAAAABAAEAAAAWAA8AAAACAAIAAAAWAA4AAAACAAIAAAAWAA0AAAABAAEAAAAWAAwAAAABAAEAAAAWAAsAAAACAAEAAAAWAAoAAAACAAEAAAAWAAkAAAABAAEAAAAVABAAAAABAAEAAAAVAA8AAAACAAEAAAAUABAAAAABAAIAAAAUAA8AAAABAAIAAAATABAAAAACAAEAAAATAA8AAAABAAIAAAASABAAAAACAAIAAAASAA8AAAACAAIAAAARABAAAAABAAEAAAARAA8AAAACAAEAAAAQABAAAAACAAIAAAAQAA8AAAACAAIAAAAPABAAAAACAAIAAAAPAA8AAAABAAEAAAAOABAAAAACAAEAAAAOAA8AAAACAAIAAAANABAAAAACAAIAAAANAA8AAAACAAIAAAAMABAAAAACAAIAAAAMAA8AAAABAAEAAAALABAAAAABAAIAAAALAA8AAAACAAIAAAAKABAAAAABAAEAAAAKAA8AAAABAAEAAAAJABAAAAACAAIAAAAJAA8AAAABAAEAAAAIABAAAAACAAEAAAAIAA8AAAABAAIAAAAHABAAAAACAAEAAAAHAA8AAAABAAIAAAAGABAAAAABAAIAAAAGAA8AAAABAAIAAAAbAAgAAAABAAEAAAAbAAcAAAACAAEAAAAbAAYAAAABAAIAAAAbAAUAAAABAAEAAAAbAAQAAAABAAEAAAAaAAgAAAACAAEAAAAaAAcAAAACAAEAAAAaAAYAAAABAAEAAAAaAAUAAAACAAIAAAAaAAQAAAABAAEAAAAZAAgAAAABAAEAAAAZAAcAAAACAAEAAAAZAAYAAAACAAIAAAAZAAUAAAACAAEAAAAZAAQAAAACAAIAAAAYAAgAAAABAAIAAAAYAAcAAAACAAEAAAAYAAYAAAACAAEAAAAYAAUAAAABAAEAAAAYAAQAAAABAAEAAAAXAAgAAAABAAIAAAAXAAcAAAABAAEAAAAXAAYAAAACAAEAAAAXAAUAAAABAAEAAAAXAAQAAAACAAIAAAAWAAgAAAABAAEAAAAWAAcAAAABAAIAAAAWAAYAAAACAAIAAAAWAAUAAAABAAEAAAAWAAQAAAABAAEAAAAFABAAAAABAAIAAAAFAA8AAAACAAEAAAAEABAAAAACAAEAAAAEAA8AAAACAAIAAAADABAAAAABAAEAAAADAA8AAAACAAIAAAACABAAAAABAAEAAAACAA8AAAABAAEAAAABABAAAAABAAEAAAABAA8AAAACAAEAAAAAABAAAAACAAIAAAAAAA8AAAACAAIAAAD//xAAAAACAAIAAAD//w8AAAACAAEAAAD+/xAAAAACAAEAAAD+/w8AAAABAAIAAAAbAAMAAAACAAIAAAAbAAIAAAABAAIAAAAbAAEAAAABAAIAAAAbAAAAAAABAAIAAAAaAAMAAAACAAEAAAAaAAIAAAACAAEAAAAaAAEAAAACAAEAAAAaAAAAAAACAAIAAAAZAAMAAAABAAIAAAAZAAIAAAACAAEAAAAZAAEAAAABAAEAAAAZAAAAAAABAAIAAAAYAAMAAAABAAIAAAAYAAIAAAACAAEAAAAYAAEAAAACAAIAAAAYAAAAAAACAAIAAAAXAAMAAAABAAIAAAAXAAIAAAACAAIAAAAXAAEAAAABAAIAAAAXAAAAAAABAAEAAAAWAAMAAAACAAEAAAAWAAIAAAABAAIAAAAWAAEAAAACAAIAAAAWAAAAAAABAAEAAAA=")

[node name="Doomy" parent="." instance=ExtResource("4_n7d4a")]
position = Vector2(166, 244)

[node name="Sword" parent="." instance=ExtResource("5_q76kk")]
position = Vector2(120, 240)
auto = true

[node name="Spawn1" type="Marker2D" parent="."]
position = Vector2(23, 22)

[node name="Spawn2" type="Marker2D" parent="."]
position = Vector2(452, 18)

[node name="Spawn3" type="Marker2D" parent="."]
position = Vector2(21, 247)

[node name="Spawn4" type="Marker2D" parent="."]
position = Vector2(449, 251)
